[package]
name = "snmp-agent"
version = "0.1.1"
authors = ["Andy Philpotts <andy@failfree.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = { version = "1.3", features = ["attributes"] }
thiserror = "1.0"
clap = { git = "https://github.com/clap-rs/clap" } # bin , use git to grab 3.0 version
snmp = { git = "https://github.com/sirxyzzy/rust-snmp" }
byte_string = "1.0"